--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <img src="/Users/maryamsiddique/Desktop/CSC196W_Week1_Submission/cyber-security.jpeg"/> 
+    <img src="cyber-security.jpeg"/> 
   <h1>
       CSC 196W Web Programming 
   </h1>
